v. 0.0.4
  1) Added a separate setting for the "Add image" action.
  2) Separate timeout settings for all actions are added.
  3) Examples of using the "cryptsetup" with "sudo" are added.
  4) Documentation fixed.
v. 0.0.3 - 2017.05.13
  1) Added support for mounting of filesistem images.
  2) Added show of device capacity.
  3) Added ebuild template for Gentoo users.
  4) Added and updated documentation in accordance with paragraphs 1-3.
  4) Added russian "documentation" and fixed translation.
  5) Minor fixes and refactoring.
v. 0.0.2 - 2017.04.13
  1) Added support for LUKS containers.
  2) Added support for regular expressions in the list of hidden devices.
  3) Added and updated documentation in accordance with paragraphs 1-2.
  4) Fixed processing mountpoints containing quotes.
  5) Fixed processing mountpoints of symlinked devices.
  6) Minor refactoring.

v. 0.0.1 - 2016.04.13
  Initial release.