@@ -12,6 +12,19 @@
 
 # ---------------------------------------------------------------------------
 
-  myterm "pmount ${1}" 2>/dev/null
+  FSel () { : ; } # FSel ## Force interactive input.
+
+#  FSel () {
+#    local N
+#    echo 'Enter key filename or empty string for interactive input.' >&2
+#    read N && echo "${N}"
+#  } # FSel
+
+  if tty >/dev/null ; then
+    F=$( FSel ) &&
+    if [ "${F}" ] ; then pmount -p "${F}" "${1}" ; else pmount "${1}" ; fi ||
+    { echo ; echo 'Press Enter to continue...' ; read ; }
+  else myterm "${0} ${1}" 2>/dev/null
+  fi
 
 #eof
