@@ -11,12 +11,13 @@
       Команда блокирования получает параметром имя, с которым открывает
   контейнер в каталоге /dev/mapper утилита "cryptsetup" (без имени
   каталога).
-      Команда разблокирования требует интерактивного ввода ключа LUKS, и
-  обе команды могут требовать интерактивного ввода пароля, если
-  реализованы через использование su или sudo.  Поэтому "tmount" по
-  умолчанию запускает их без установки таймаута.  Будьте осторожны: в
-  таком случае зависание этих скриптов блокирует работу приложения.  По
-  этой же причине контейнеры никогда не разблокируются автоматически.
+      Команда разблокирования требует интерактивного ввода пароля LUKS
+  или имени файла ключа, и обе команды могут требовать интерактивного
+  ввода пароля, если реализованы через использование su или sudo.
+  Поэтому "tmount" по умолчанию запускает их без установки таймаута.
+  Будьте осторожны: в таком случае зависание этих скриптов блокирует
+  работу приложения.  По этой же причине контейнеры никогда не
+  разблокируются автоматически.
       Программа "pmount" может самостоятельно разблокировать и
   автоматически блокировать контейнер LUKS после отмонтирования
   содержащейся в нём файловой системы и не требует явного вызова утилиты
@@ -28,3 +29,10 @@
   без ввода пароля.  Кроме того, при использовании эмуляторов терминала
   или утилит наподобие "ktsuss" теряются код возврата и содержимое
   stderr вызываемой программы.
+      Замечания по реализации:
+      Использование в примерах программы qarma
+  (http://github.com/luebking/qarma) и собственной обёртки для задания
+  переменной SUDO_ASKPASS вызвано тем, что GTK-программы выводят много
+  мусора в stderr.  Поэтому использование таких программ как
+  "ssh-askpass-fullscreen", "x11-ssh-askpass", "gtkdialog", "xdialog"
+  (и даже zenity) и пр. возможно, но значительно менее удобно.
